fix: Map button overlap (#16301)

--- a/common/app/Nav/nav.less
+++ b/common/app/Nav/nav.less
@@ -228,6 +228,7 @@ li.nav-avatar {
     flex-grow: 1;
     display: flex;
     align-items: center;
+    margin-right: 10px;
   }
 
 }
